5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4157/executions/1836_2602.log
== SUBMITION (2019-06-27 11:04:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
q = q.T
comida = array([[2,1,4],[1,2,0],[2,3,2]])
alimento = dot(inv(comida), q.T)
print("esafilococo:", round(alimento[0], 1))
print("salmonela:", round(alimnto[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.01599
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2602/main.py", line 9, in <module>
    print("salmonela:", round(alimnto[1], 1))
NameError: name 'alimnto' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 11:04:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
q = q.T
comida = array([[2,1,4],[1,2,0],[2,3,2]])
alimento = dot(inv(comida), q.T)
print("esafilococo:", round(alimento[0], 1))
print("salmonela:", round(alimnto[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
0.801526
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2602/main.py", line 9, in <module>
    print("salmonela:", round(alimnto[1], 1))
NameError: name 'alimnto' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 11:06:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
q = q.T
comida = array([[2,1,4],[1,2,0],[2,3,2]])
alimento = dot(inv(comida), q.T)
print("estafilococo:", round(alimento[0],1)
print("salmonela:", round(alimnto[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
0.821643
-- ERROR:
  File "/home/codebench/codes/1836/2602/main.py", line 9
    print("salmonela:", round(alimnto[1], 1))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:06:39) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
q = q.T
comida = array([[2,1,4],[1,2,0],[2,3,2]])
alimento = dot(inv(comida), q.T)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimnto[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 11:06:45) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
q = q.T
comida = array([[2,1,4],[1,2,0],[2,3,2]])
alimento = dot(inv(comida), q.T)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimnto[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.13278
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2602/main.py", line 9, in <module>
    print("salmonela:", round(alimnto[1], 1))
NameError: name 'alimnto' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 11:06:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
q = q.T
comida = array([[2,1,4],[1,2,0],[2,3,2]])
alimento = dot(inv(comida), q.T)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimnto[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.23249
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2602/main.py", line 9, in <module>
    print("salmonela:", round(alimnto[1], 1))
NameError: name 'alimnto' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:28:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
q = q.T
comida = array([[2,1,4],[1,2,0],[2,3,2]])
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimnto[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
0.799533
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2602/main.py", line 9, in <module>
    print("salmonela:", round(alimnto[1], 1))
NameError: name 'alimnto' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:28:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
q = q.T
comida = array([[2,1,4],[1,2,0],[2,3,2]])
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimnto[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.33482
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2602/main.py", line 9, in <module>
    print("salmonela:", round(alimnto[1], 1))
NameError: name 'alimnto' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:28:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
q = q.T
comida = array([[2,1,4],[1,2,0],[2,3,2]])
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimnto[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
4.30378
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2602/main.py", line 9, in <module>
    print("salmonela:", round(alimnto[1], 1))
NameError: name 'alimnto' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:28:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
q = q.T
comida = array([[2,1,4],[1,2,0],[2,3,2]])
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimnto[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
2.93001
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2602/main.py", line 9, in <module>
    print("salmonela:", round(alimnto[1], 1))
NameError: name 'alimnto' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:28:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
q = q.T
comida = array([[2,1,4],[1,2,0],[2,3,2]])
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimnto[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
6.76346
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2602/main.py", line 9, in <module>
    print("salmonela:", round(alimnto[1], 1))
NameError: name 'alimnto' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:28:33) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
q = q.T
comida = array([[2,1,4],[1,2,0],[2,3,2]])
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimnto[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
8.76978
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2602/main.py", line 9, in <module>
    print("salmonela:", round(alimnto[1], 1))
NameError: name 'alimnto' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:28:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
q = q.T
comida = array([[2,1,4],[1,2,0],[2,3,2]])
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimnto[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
9.66946
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2602/main.py", line 9, in <module>
    print("salmonela:", round(alimnto[1], 1))
NameError: name 'alimnto' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:28:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
q = q.T
comida = array([[2,1,4],[1,2,0],[2,3,2]])
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimnto[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
5.25111
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2602/main.py", line 9, in <module>
    print("salmonela:", round(alimnto[1], 1))
NameError: name 'alimnto' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:28:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
q = q.T
comida = array([[2,1,4],[1,2,0],[2,3,2]])
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimnto[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
5.27558
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2602/main.py", line 9, in <module>
    print("salmonela:", round(alimnto[1], 1))
NameError: name 'alimnto' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:28:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
q = q.T
comida = array([[2,1,4],[1,2,0],[2,3,2]])
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimnto[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
5.39744
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2602/main.py", line 9, in <module>
    print("salmonela:", round(alimnto[1], 1))
NameError: name 'alimnto' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:28:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
q = q.T
comida = array([[2,1,4],[1,2,0],[2,3,2]])
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimnto[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
5.48215
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2602/main.py", line 9, in <module>
    print("salmonela:", round(alimnto[1], 1))
NameError: name 'alimnto' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:28:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
q = q.T
comida = array([[2,1,4],[1,2,0],[2,3,2]])
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimnto[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
3.31854
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1836/2602/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:29:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
q = q.T
comida = array([[2,1,4],[1,2,0],[2,3,2]])
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimnto[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.08491
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2602/main.py", line 9, in <module>
    print("salmonela:", round(alimnto[1], 1))
NameError: name 'alimnto' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:29:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
q = q.T
comida = array([[2,1,4],[1,2,0],[2,3,2]])
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimnto[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.02703
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2602/main.py", line 9, in <module>
    print("salmonela:", round(alimnto[1], 1))
NameError: name 'alimnto' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:31:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
q = q.T
comida = array([[2,1,4],[1,2,0],[2,3,2]])
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimnto[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:32:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
q = q.T
comida = array([[2,1,4],[1,2,0],[2,3,2]])
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimento[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.20039
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
Salmonela
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:33:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
q = q.T
comida = array([[2,1,4],[1,2,0],[2,3,2]])
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimento[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
0.774231
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
Salmonela
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:33:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
q = q.T
comida = array([[2,1,4],[1,2,0],[2,3,2]])
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimento[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.86793
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
Salmonela
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:33:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
q = q.T
comida = array([[2,1,4],[1,2,0],[2,3,2]])
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimento[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:33:59) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
q = q.T
comida = array([[2,1,4],[1,2,0],[2,3,2]])
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimento[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
0.859772
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
Salmonela
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:34:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
q = q.T
comida = array([[2,1,4],[1,2,0],[2,3,2]])
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimento[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
0.811761
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:34:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
q = q.T
comida = array([[2,1,4],[1,2,0],[2,3,2]])
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimento[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.49959
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
Salmonela
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:37:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
comida = array([[2,1,4],[1,2,0],[2,3,2]])
q = q.T
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimento[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.05935
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
Salmonela
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:37:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
comida = array([[2,1,4],[1,2,0],[2,3,2]])
q = q.T
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimento[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.05
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:37:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
comida = array([[2,1,4],[1,2,0],[2,3,2]])
q = q.T
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimento[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.56433
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
da-lhe:estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:37:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
comida = array([[2,1,4],[1,2,0],[2,3,2]])
q = q.T
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimento[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.97595
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
Salmonela
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:37:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
comida = array([[2,1,4],[1,2,0],[2,3,2]])
q = q.T
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimento[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
2.52351
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:37:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
comida = array([[2,1,4],[1,2,0],[2,3,2]])
q = q.T
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimento[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
3.8857
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
Salmonela
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:37:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
comida = array([[2,1,4],[1,2,0],[2,3,2]])
q = q.T
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimento[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
3.84204
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1836/2602/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:37:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
comida = array([[2,1,4],[1,2,0],[2,3,2]])
q = q.T
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimento[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
4.33054
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
Salmonela
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:37:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
comida = array([[2,1,4],[1,2,0],[2,3,2]])
q = q.T
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimento[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
7.04813
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
Salmonela
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
Salmonela
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:37:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
comida = array([[2,1,4],[1,2,0],[2,3,2]])
q = q.T
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimento[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
7.99862
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
Salmonela
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:37:45) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
comida = array([[2,1,4],[1,2,0],[2,3,2]])
q = q.T
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimento[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
8.35542
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:37:45) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
comida = array([[2,1,4],[1,2,0],[2,3,2]])
q = q.T
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimento[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
8.69222
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
Salmonela
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:37:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
comida = array([[2,1,4],[1,2,0],[2,3,2]])
q = q.T
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimento[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
5.9808
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
Salmonela
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
da-lhe:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:37:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
comida = array([[2,1,4],[1,2,0],[2,3,2]])
q = q.T
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimento[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
2.83804
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
da-lhe:
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
da-lhe:
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:37:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

q = array(eval(input("da-lhe:")))
comida = array([[2,1,4],[1,2,0],[2,3,2]])
q = q.T
alimento = dot(inv(comida), q)
print("estafilococo:", round(alimento[0],1))
print("salmonela:", round(alimento[1], 1))
print("coli:", round(alimento[2], 1))

if(alimento[0] == min(alimento)):
	print("estafilococo")
elif(alimento[1]==min(alimento)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
2.29902
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1836/2602/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:39:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

a = array(eval(input("da-lhe:")))
bact = array([[2,1,4],[1,2,0],[2,3,2]])
a = a.T
x = dot(inv(bact), a)
print("estafilococo:", round(x[0],1))
print("salmonela:", round(x[1], 1))
print("coli:", round(x[2], 1))

if(x[0] == min(x)):
	print("estafilococo")
elif(x[1]==min(x)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.0345
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
Salmonela
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:39:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

a = array(eval(input("da-lhe:")))
bact = array([[2,1,4],[1,2,0],[2,3,2]])
a = a.T
x = dot(inv(bact), a)
print("estafilococo:", round(x[0],1))
print("salmonela:", round(x[1], 1))
print("coli:", round(x[2], 1))

if(x[0] == min(x)):
	print("estafilococo")
elif(x[1]==min(x)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.11079
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
Salmonela
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:41:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

a = array(eval(input("vetor:")))
bact = array ([[2,1,4],[1,2,0],[2,3,2]])
a = a.T
x = dot(inv(bact),a)
print("estafilococo:",round(x[0],1))
print("salmonela:",round(x[1], 1))
print("coli:",round(x[2], 1))

if(x[0]==min(x)):
	print("estafilococo")
elif(x[1]==min(x)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.74717
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
vetor:estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
vetor:estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
Salmonela
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:41:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

a = array(eval(input("vetor:")))
bact = array ([[2,1,4],[1,2,0],[2,3,2]])
a = a.T
x = dot(inv(bact),a)
print("estafilococo:",round(x[0],1))
print("salmonela:",round(x[1], 1))
print("coli:",round(x[2], 1))

if(x[0]==min(x)):
	print("estafilococo")
elif(x[1]==min(x)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
2.54777
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
vetor:estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
vetor:estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
Salmonela
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:41:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

a = array(eval(input("vetor:")))
bact = array ([[2,1,4],[1,2,0],[2,3,2]])
a = a.T
x = dot(inv(bact),a)
print("estafilococo:",round(x[0],1))
print("salmonela:",round(x[1], 1))
print("coli:",round(x[2], 1))

if(x[0]==min(x)):
	print("estafilococo")
elif(x[1]==min(x)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
3.17037
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
vetor:estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
vetor:estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
Salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:41:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

a = array(eval(input("vetor:")))
bact = array ([[2,1,4],[1,2,0],[2,3,2]])
a = a.T
x = dot(inv(bact),a)
print("estafilococo:",round(x[0],1))
print("salmonela:",round(x[1], 1))
print("coli:",round(x[2], 1))

if(x[0]==min(x)):
	print("estafilococo")
elif(x[1]==min(x)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
4.79777
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
vetor:estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
vetor:estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
Salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:41:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

a = array(eval(input("vetor:")))
bact = array ([[2,1,4],[1,2,0],[2,3,2]])
a = a.T
x = dot(inv(bact),a)
print("estafilococo:",round(x[0],1))
print("salmonela:",round(x[1], 1))
print("coli:",round(x[2], 1))

if(x[0]==min(x)):
	print("estafilococo")
elif(x[1]==min(x)):
	print("Salmonela")
else:
	print("coli")
-- EXECUTION TIME:
5.82785
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
vetor:estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
Salmonela
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:55:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

a = array(eval(input("vetor:")))
bact = array([[2,1,4],[1,2,0],[2,3,2]])
a = a.T
x = dot(inv(bact),a)
print("estafilococo: ",round(x[0],1))
print("salmonela: ",round(x[1],1))
print("coli: ",round(x[2],1))

if(x[0]==min(x)):
	print("estafilococo")
elif(x[1]==min(x)):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.20085
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
vetor:estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:56:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

a = array(eval(input("vetor:")))
bact = array([[2,1,4],[1,2,0],[2,3,2]])
a = a.T
x = dot(inv(bact),a)
print("estafilococo: ",round(x[0],1))
print("salmonela: ",round(x[1],1))
print("coli: ",round(x[2],1))

if(x[0]==min(x)):
	print("estafilococo")
elif(x[1]==min(x)):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.12803
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:56:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

a = array(eval(input("vetor:")))
bact = array([[2,1,4],[1,2,0],[2,3,2]])
a = a.T
x = dot(inv(bact),a)
print("estafilococo: ",round(x[0],1))
print("salmonela: ",round(x[1],1))
print("coli: ",round(x[2],1))

if(x[0]==min(x)):
	print("estafilococo")
elif(x[1]==min(x)):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.15577
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
